# opencut002

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: provider_pricing.yaml  providers.yaml
docs/: commercialization-plan.md  data-flow-contract.md  market-research.md  material-diversity-design.md  opencut-v3-analysis-2026-07-10.md  opencut-v3-analysis-v2-2026-07-10.md  opencut-v3-analysis-v3-2026-07-11.md
pipelines/: default.yaml  draft.yaml  minimal.yaml  script_first.yaml  topic_first.yaml
remotion/: package-lock.json  package.json  render_video.mjs  tsconfig.json
remotion_new/: package.json
scripts/: bootstrap.bat  bootstrap.sh  clone_voice.py  gen_stickers.py  pack.py  render_smoke.py  run_education_video.py  run_full.py  sample_education_script.txt  test_minimax_vision.py  test_tts_emotion.py  test_voice_clone.py  verify_image_gen.py  verify_layer.py  wiring_check.py
src/: __init__.py  config.py
tests/: conftest.py  test_api_health.py  test_auto_reframe.py  test_base_agent_extract_json.py  test_c01_ai_label.py  test_c03_material_prep.py  test_c04_jobs.py  test_c05_auth.py  test_c07_stability.py  test_c08_keypool.py  test_c1_2_face_masker.py  test_c2_script_mode.py  test_c3_layer_filling.py  test_clip_montage_scorer.py  test_cost_tracker.py  test_cross_language_contract.py  test_domain_cache_ttl.py  test_domain_completeness.py  test_e2e_full_pipeline.py  test_e2e_real_provider.py  test_fixes_integration.py  test_forced_align.py  test_image_matcher_candidates.py  test_m01_scaffold.py  test_m02_state.py  test_m03_engine.py  test_m04_m05_domain_skill.py  test_m06_m07_agent_provider.py  test_m08_quality.py  test_m09_m11_audio.py  test_m10_remotion.py  test_m12_web_research.py  test_m13_m16_agents.py  test_m17_m21_advanced.py  test_m23_e2e.py  (+14 more)
(+140 files in other folders)
