[project]
name = "opencut-v3"
version = "0.4.0"
description = "AI-driven multi-domain short video production platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "edge-tts>=6.1",
    "openai>=1.0",
    "aiofiles>=24.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "bcrypt>=4.0",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]
gpu = ["whisperx>=3.1"]
face = ["opencv-python>=4.8", "Pillow>=10.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = false

[tool.coverage.report]
# 80% 目标达成（工具模块测试补全后）
fail_under = 80
show_missing = true
omit = ["src/__init__.py"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
